--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,76 @@
 
 html {
-    position: fixed;
+    /* position: fixed; */
     top: 0;
+    margin:0;
+    padding:0;
+}
+body {
+    background-color: white;
+    margin:0;
+    padding:0;
+}
+header {
+    background-color: white;
+    height: 200px;
+    width:100vw;
+    
+
+}
+
+.title {
+    
+}
+
+.title h1{
+    width:100%;
+    color: black;
+    font-family:'Times New Roman', Times, serif;
+    text-align: center;
+    letter-spacing: 0.5rem;
+    position:absolute;
+    margin-top: 100px;
+    font-size: 4rem;
+
+}
+
+
+main {
+    height: 100vh;
+    width:100vw;
+
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    background-color: black;
+    width:100vw;
+    height:200px;
+}
+
+.infomation {
+    color: white;
+    font-size: 2rem;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    letter-spacing: 1rem;
+    position:absolute;
+    margin-top: 20px;
+}
+
+.info_text{
+    float: left;
+    margin-left: 35vw;
+    width:320px;
+
+}
+.plateau_icon{
+    float: left;
+}
+
+.plateau_icon img{
+    width: 6rem;
+    height:auto;
+    margin-top:10px;
 }
