--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@ html {
     padding:0;
 }
 body {
+    
     background-color: white;
     margin:0;
     padding:0;
@@ -36,6 +37,7 @@ header {
 
 
 main {
+    position: fixed;
     height: 100vh;
     width:100vw;
 
