--- a/styles/style.css
+++ b/styles/style.css
@@ -6,17 +6,16 @@ html {
     padding:0;
 }
 body {
-    
+    position: fixed;
     background-color: white;
     margin:0;
     padding:0;
 }
 header {
+    position: fixed;
     background-color: white;
     height: 200px;
     width:100vw;
-    
-
 }
 
 .title {
@@ -40,11 +39,12 @@ main {
     position: fixed;
     height: 100vh;
     width:100vw;
+    margin-top:200px;
 
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     background-color: black;
     width:100vw;
