--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,42 @@ main {
 
 }
 
+.background{
+    height:100%;
+    width:100%;
+}
+
+.links {
+    width:20rem;
+    height: 100%;
+    text-align: center;
+    margin:auto;
+    margin-top:20rem;
+    display:block;
+    font-size: 7reml;
+}
+
+.links  a{
+    display: block;
+    margin-top: 1rem;;
+    text-decoration: none;
+    color:white;
+    font-size: 7reml;
+
+    background-color: black;
+    width:100%;
+    height:3rem;
+    text-align: center;
+}
+
+.canvas {
+    width:100vw;
+    height: auto;
+}
+
+
+
+
 footer {
     position: fixed;
     bottom: 0;
