--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,7 @@ main {
     margin:auto;
     margin-top:20rem;
     display:block;
-    font-size: 7rem;
+    font-size: 7reml;
 }
 
 .links  a{
@@ -64,7 +64,7 @@ main {
     margin-top: 1rem;;
     text-decoration: none;
     color:white;
-    font-size: 7rem;
+    font-size: 7reml;
 
     background-color: black;
     width:100%;
