--- a/styles/style.css
+++ b/styles/style.css
@@ -4,12 +4,14 @@ html {
     top: 0;
     margin:0;
     padding:0;
+    overflow: hidden;
 }
 body {
     position: fixed;
     background-color: white;
     margin:0;
     padding:0;
+    overflow: hidden;
 }
 header {
     position: fixed;
