--- a/styles/style_music.css
+++ b/styles/style_music.css
@@ -61,8 +61,12 @@ main {
 .player {
     height:40vh;
 }
+
+
+
+
 .player_container {
-    width: 60vw;
+    width: 100vw;
     height:100%;
     margin:auto;
     margin-top:5vh;
@@ -158,7 +162,19 @@ main {
 @keyframes rotate-anime {
     0%  {transform: rotate(0);}
     100%  {transform: rotate(360deg);}
-  }
+}
+
+
+
+
+
+
+
+.city_viewer {
+    width:100vw;
+    height:50vh;
+    background-color: black;
+}
 
 .background{
     height:100%;
