--- a/styles/style_music.css
+++ b/styles/style_music.css
@@ -130,7 +130,7 @@ main {
 
 .record {
     height:300px;
-    width:100%;
+    width:100vw;
     margin:auto;
     margin-top: 3rem;
     z-index: 40;
@@ -149,14 +149,14 @@ main {
 }
 
 .record_img {
-    width:100%;
-    height:100%;
+    width:50vw;
+    height:50vw;
     border-radius:50%;
     background-image: url("../data/jacket.png");
     background-position: -50px,50px;
     background-size: 80vw;
-    margin:auto;
-    border: solid 6px white;
+    outline: 6px solid white;
+    outline-offset: -6px;
     animation: rotate-anime 10s linear infinite;
 
 }
