--- a/styles/style_music.css
+++ b/styles/style_music.css
@@ -181,7 +181,7 @@ main {
 .triangle{
 	width:50vw;
 	height:50vw;
-    margin-left:25.7designvw;
+    margin-left:25.7vw;
     
 	/* border-right:300px solid transparent;
 	border-left:300px solid transparent;
