--- a/styles/style_music.css
+++ b/styles/style_music.css
@@ -152,7 +152,7 @@ main {
     width:50vw;
     height:50vw;
     border-radius:50%;
-    background-image: url("../data/jacket.png");
+    background-image: url("../data/jacket_18-40.jpeg");
     background-position: -50px,50px;
     background-size: 80vw;
     border: 6px solid white;
