--- a/styles/style_music.css
+++ b/styles/style_music.css
@@ -152,9 +152,9 @@ main {
     width:50vw;
     height:50vw;
     border-radius:50%;
-    background-image: url("../data/jacket_18-40.jpeg");
-    background-position: -50px,50px;
-    background-size: 80vw;
+    background-image: url("../data/jacket_red.png");
+    background-position: -10px,10px;
+    background-size: 50vw;
     border: 6px solid white;
     outline-offset: -6px;
     animation: rotate-anime 10s linear infinite;
