--- a/styles/style_music.css
+++ b/styles/style_music.css
@@ -137,6 +137,8 @@ main {
 
 }
 .record_container {
+    position: relative;
+    height:100%;
 }
 
 
@@ -171,9 +173,8 @@ main {
 .indicator {
     height:0;
     width:100vw;
-    z-index: 100;
     background-color: transparent;
-    z-index: 60;
+    z-index: 20;
     /* position: relative; */
 }
 
@@ -182,6 +183,8 @@ main {
 	width:50vw;
 	height:50vw;
     margin-left:25.7vw;
+    /* background-color: blue; */
+    z-index: 10;
     
 	/* border-right:300px solid transparent;
 	border-left:300px solid transparent;
@@ -210,10 +213,12 @@ main {
     width:100vw;
     height:50vh;
     z-index: 0;
+    background-color: black;
 }
 .city_viewer_container {
     width:100%;
     height:100%;
+    background-color: black;
 }
 
 .city_viewer_container_background {
@@ -242,7 +247,7 @@ main {
     text-decoration: none;
     color:white;
     font-size: 2rem;
-    background-color: black;
+    /* background-color: black; */
     width:100%;
     height:6rem;
     text-align: center;
