--- a/styles/style_music.css
+++ b/styles/style_music.css
@@ -11,19 +11,21 @@ body {
     background-color: white;
     margin:0;
     padding:0;
+    height:100vh;
 }
 
 
 /* ---------------------------header--------------------- */
 header {
-    height: 180px;
+    height: 150px;
     width:100vw;
+    position:fixed;
 }
 .header_container {
     width: 85vw;
     height:140px;
     margin:auto;
-    margin-top:20px;
+    /* margin-top:20px; */
 }
 
 .menu {
@@ -69,9 +71,18 @@ main {
     width: 100vw;
     height:100%;
     margin:auto;
-    margin-top:4vh;
+    margin-top:140px;
 
 }
+
+.controller {
+    height:38vh;
+}
+
+
+
+
+
 .music_info {
     height:170px;
 
@@ -262,8 +273,8 @@ main {
 /* ---------------------------footer--------------------- */
 
 footer {
-    position: fixed;
-    bottom: 0;
+    position: absolute;/*←絶対位置*/
+    bottom: 0; /*下に固定*/
     background-color: black;
     width:100vw;
     height:140px;
