--- a/styles/style_gahaku.css
+++ b/styles/style_gahaku.css
@@ -18,6 +18,15 @@ header {
     width:100vw;
 }
 
+html,body{
+    overflow: hidden
+}
+
+button {
+    position: absolute;
+    z-index: 100;
+}
+
 .title {
     
 }
